force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineers Australia</fullName>
            </value>
            <value>
                <fullName>Engineers Education Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>