force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Contact_EA_Member_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_EA_Member_No__c</fullName>
    <formula>BMCRF_Related_Case__r.Contact.EA_Member_No__c</formula>
    <label>Contact EA Member No</label>
    <type>Text</type>
</CustomField>