force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <formula>BMCRF_Related_Case__r.Contact_s_Email__c</formula>
    <label>Contact Email Address</label>
    <type>Text</type>
</CustomField>