force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <formula>BMCRF_Related_Case__r.Contact_s_First_Name__c</formula>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>