force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <formula>BMCRF_Related_Case__r.Contact_Last_Name__c</formula>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>