force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Contact_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_No__c</fullName>
    <formula>BMCRF_Related_Case__r.Contact_s_Mobile_No__c</formula>
    <label>Contact Mobile No</label>
    <type>Text</type>
</CustomField>