force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <formula>BMCRF_Related_Case__r.Contact_s_Phone_Number__c</formula>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>