force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents3</relationshipName>
    <type>Lookup</type>
</CustomField>