force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <label>Destination Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>