force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Does_new_employee_require_a_laptop_set_u__c.field-meta.xml
<CustomField>
    <fullName>Does_new_employee_require_a_laptop_set_u__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does new employee require a laptop set-u</label>
    <type>Checkbox</type>
</CustomField>