force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Does_new_employee_require_a_mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>Does_new_employee_require_a_mobile_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does new employee require a mobile phone</label>
    <type>Checkbox</type>
</CustomField>