force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Does_new_employee_require_access_to_a_sh__c.field-meta.xml
<CustomField>
    <fullName>Does_new_employee_require_access_to_a_sh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does new employee require access to a sh</label>
    <type>Checkbox</type>
</CustomField>