force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/EA_Contact_EA_Member_No__c.field-meta.xml
<CustomField>
    <fullName>EA_Contact_EA_Member_No__c</fullName>
    <description>Contact EA Member No text field referred on Incident console</description>
    <label>Contact EA Member No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>