force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>