force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Full_path_name__c.field-meta.xml
<CustomField>
    <fullName>Full_path_name__c</fullName>
    <label>Full path name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>