force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Hardware_Requested_You_may_choose_more__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Requested_You_may_choose_more__c</fullName>
    <label>Hardware Requested (You may choose more</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Surface Pro</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Mobile phone</fullName>
            </value>
            <value>
                <fullName>Desk phone headset</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>