force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adelaide office</fullName>
            </value>
            <value>
                <fullName>Brisbane office</fullName>
            </value>
            <value>
                <fullName>Canberra office</fullName>
            </value>
            <value>
                <fullName>Darwin office</fullName>
            </value>
            <value>
                <fullName>Hobart office</fullName>
            </value>
            <value>
                <fullName>Melbourne office</fullName>
            </value>
            <value>
                <fullName>Newcastle office</fullName>
            </value>
            <value>
                <fullName>Perth office</fullName>
            </value>
            <value>
                <fullName>Sydney office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>