force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Mailbox_or_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_or_Distribution_List__c</fullName>
    <label>Mailbox or Distribution List</label>
    <type>TextArea</type>
</CustomField>