force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents1</relationshipName>
    <type>Lookup</type>
</CustomField>