force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Name_of_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Distribution_List__c</fullName>
    <label>Name of Distribution List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>