force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Name_of_Other_Application__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Other_Application__c</fullName>
    <label>Name of Other Application</label>
    <length>250</length>
    <type>Text</type>
</CustomField>