force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Name_of_shared_mailbox__c.field-meta.xml
<CustomField>
    <fullName>Name_of_shared_mailbox__c</fullName>
    <label>Name of shared mailbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>