force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Name_of_Software_Needed__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Software_Needed__c</fullName>
    <label>Name of Software Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>