force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/New_employee_name__c.field-meta.xml
<CustomField>
    <fullName>New_employee_name__c</fullName>
    <label>New employee name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>