force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/OST_Worked_Date__c.field-meta.xml
<CustomField>
    <fullName>OST_Worked_Date__c</fullName>
    <label>OST Worked Date</label>
    <type>DateTime</type>
</CustomField>