force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Other_allocated_assets__c.field-meta.xml
<CustomField>
    <fullName>Other_allocated_assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other allocated assets?</label>
    <type>Checkbox</type>
</CustomField>