force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <label>Position Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>