force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Related_Case_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Email_Template__c</fullName>
    <formula>IF(  ISBLANK( BMCRF_Related_Case_Formula__c ) , &quot;&quot;,  &quot;Case No: &quot; &amp; BMCRF_Related_Case_Formula__c )</formula>
    <label>Related Case Email Template</label>
    <type>Text</type>
</CustomField>