force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Relocation_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Request_Type__c</fullName>
    <label>Relocation Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Relocation</fullName>
            </value>
            <value>
                <fullName>Desk relocation in the same office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>