force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <formula>BMCServiceDesk__FKRequestDefinition__c</formula>
    <label>Request Type~</label>
    <type>Text</type>
</CustomField>