force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Required_Action__c.field-meta.xml
<CustomField>
    <fullName>Required_Action__c</fullName>
    <label>Required Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop set-up</fullName>
            </value>
            <value>
                <fullName>Surface Pro set-ip</fullName>
            </value>
            <value>
                <fullName>No equipment move required from IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>