force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access to an application (Confluence, Salesforce, myPortal, Webex etc.)</fullName>
            </value>
            <value>
                <fullName>Request for software Installation (MS Project, MS Visio etc)</fullName>
            </value>
            <value>
                <fullName>Password reset</fullName>
            </value>
            <value>
                <fullName>Request for a new email distribution list or amend or delete an existing list</fullName>
            </value>
            <value>
                <fullName>Access to shared folders</fullName>
                <label>Shared folder access or ammendments</label>
            </value>
            <value>
                <fullName>Access to a new shared mailbox or a amend or delete an existing mailbox</fullName>
                <label>Access to a new or existing shared mailbox</label>
            </value>
            <value>
                <fullName>Access to a user&#39;s mailbox or calendar</fullName>
            </value>
            <value>
                <fullName>New Employee (employee account creation &amp; asset requirements)</fullName>
            </value>
            <value>
                <fullName>Employee departure (remove all access for a departed employee)</fullName>
            </value>
            <value>
                <fullName>Employee relocating (employee relocating in existing office or to another office)</fullName>
            </value>
            <value>
                <fullName>Public website Modifications</fullName>
            </value>
            <value>
                <fullName>VPN access</fullName>
            </value>
            <value>
                <fullName>New hardware (if you have a problem with your existing hardware please click on Is something broken?)</fullName>
            </value>
            <value>
                <fullName>BI Data request (reports, lists etc)</fullName>
            </value>
            <value>
                <fullName>Global Roaming (Mobile Phone) Request – Management approval will be required</fullName>
            </value>
            <value>
                <fullName>My e=request is not in the above list</fullName>
                <label>My request is not in the above list</label>
            </value>
            <value>
                <fullName>Salesforce Request</fullName>
                <label>Salesforce request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>