force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Software_Requested__c.field-meta.xml
<CustomField>
    <fullName>Software_Requested__c</fullName>
    <label>Software Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mitel Contact Centre</fullName>
            </value>
            <value>
                <fullName>Mitel Call Recording</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>