force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Subcategory_1__c.field-meta.xml
<CustomField>
    <fullName>Subcategory_1__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subcategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Create Application / Add Documents</fullName>
            </value>
            <value>
                <fullName>Outcome Submission</fullName>
            </value>
            <value>
                <fullName>Submit Additional Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>