force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Type of MyPortalt Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Fault__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chartered</fullName>
            </value>
            <value>
                <fullName>eMembership</fullName>
            </value>
            <value>
                <fullName>eStage1</fullName>
            </value>
            <value>
                <fullName>National Registration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>