force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/System_Access__c.field-meta.xml
<CustomField>
    <fullName>System_Access__c</fullName>
    <label>System Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Confluence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>