force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Type_of_Fault__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fault__c</fullName>
    <label>Type of Fault</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MyPortal</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Confluence</fullName>
            </value>
            <value>
                <fullName>EA Corporate Website</fullName>
            </value>
            <value>
                <fullName>Mitel Software</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Outlook 365</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>AV/VC Equipment</fullName>
            </value>
            <value>
                <fullName>VPN (Remote Access)</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>