force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New shared mailbox</fullName>
            </value>
            <value>
                <fullName>Modify shared mailbox</fullName>
            </value>
            <value>
                <fullName>Delete shared mailbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>