force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Type_of_request_for_distribution_list__c.field-meta.xml
<CustomField>
    <fullName>Type_of_request_for_distribution_list__c</fullName>
    <label>Type of request for distribution list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Distribution List</fullName>
            </value>
            <value>
                <fullName>Modify Distribution List</fullName>
            </value>
            <value>
                <fullName>Remove Distribution List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>