force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Type_of_ticket__c.field-meta.xml
<CustomField>
    <fullName>Type_of_ticket__c</fullName>
    <label>Type of ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Is something broken (used to work but no longer does)</fullName>
                <label>Is something broken (e.g. did work but no longer does)</label>
            </value>
            <value>
                <fullName>Do you Require something (Access, new hardware, new starter, departures)</fullName>
                <label>Do you Require something (e.g. access, hardware)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>