force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.UserRole.Name</formula>
    <label>User Role</label>
    <type>Text</type>
</CustomField>