force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/User_Role_Text__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Text__c</fullName>
    <label>User Role Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>