force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/What_can_we_help_you_with__c.field-meta.xml
<CustomField>
    <fullName>What_can_we_help_you_with__c</fullName>
    <label>What can we help you with?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>