force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Who_is_the_owner_of_shared_mailbox__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_owner_of_shared_mailbox__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who is the owner of shared mailbox?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents2</relationshipName>
    <type>Lookup</type>
</CustomField>