force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Who_requires_access_to_shared_mailbox__c.field-meta.xml
<CustomField>
    <fullName>Who_requires_access_to_shared_mailbox__c</fullName>
    <label>Who requires access to shared mailbox?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>