force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCRF_cannot_select_parent_category.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCRF_cannot_select_parent_category</fullName>
    <active>true</active>
    <errorConditionFormula>((BMCServiceDesk__FKCategory__r.BMCServiceDesk__Contains_Incident_children_categories__c &gt; 0.0 &amp;&amp; BMCServiceDesk__FKCategory__r.BMCServiceDesk__Contains_Incident_children_categories__c != 0.0)) &amp;&amp;  BMCServiceDesk__Type__c != &#39;Service Request&#39;</errorConditionFormula>
    <errorMessage>Please choose a sub-category to proceed.</errorMessage>
</ValidationRule>