force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCRF_Cannot_Update_Closed_Incident.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCRF_Cannot_Update_Closed_Incident</fullName>
    <active>true</active>
    <errorConditionFormula>(AND(  BMCServiceDesk__Status_ID__c == &#39;Closed&#39;, BMCServiceDesk__Status_ID__c != &#39;Rejected&#39;, NOT(ISCHANGED(BMCServiceDesk__Is_New_Record__c)), NOT( BMCServiceDesk__state__c ) , NOT( PRIORVALUE( BMCServiceDesk__state__c ) ), NOT(ISNEW()) ,NOT( ISCHANGED( BMCServiceDesk__Total_Duration__c ) ), NOT( ISCHANGED( BMCServiceDesk__Feedback__c ) ), NOT( ISCHANGED( Applications_ST_Assigned_Date__c ) ), NOT( ISCHANGED( BMCServiceDesk__Compliments_and_Complaints__c ) ), NOT(ISCHANGED( BMCServiceDesk__Feedback_Last_Submitted__c)),NOT(ISCHANGED( BMCServiceDesk__FKBroadcast__c)),NOT(AND(ISCHANGED(BMCServiceDesk__dueDateTime__c),NOT(BMCServiceDesk__state__c), (LastModifiedDate - BMCServiceDesk__closeDateTime__c) &lt; 0.0003 , (LastModifiedDate - BMCServiceDesk__closeDateTime__c) &gt; -0.1 )),NOT( ISCHANGED( BMCServiceDesk__RF_TimeToClose__c ) ),NOT( $UserRole.DeveloperName =&#39;Administrator&#39;)))</errorConditionFormula>
    <errorMessage>This incident is closed.Please Reopen the incident to modify it.</errorMessage>
</ValidationRule>