force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCRF_ClosureCode_Is_Mandate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCRF_ClosureCode_Is_Mandate</fullName>
    <active>true</active>
    <description>BMCRF_ClosureCode_Is_Mandate</description>
    <errorConditionFormula>ISPICKVAl( BMCRF_Closure_Code_Incident__c,&#39;&#39; ) 
 &amp;&amp;   BMCServiceDesk__Type__c = &#39;Incident&#39;
&amp;&amp;
(BMCServiceDesk__Status_ID__c = &#39;Closed&#39; || 
BMCServiceDesk__Status_ID__c = &#39;Rejected&#39; || BMCServiceDesk__Status_ID__c = &#39;Cancelled&#39;)</errorConditionFormula>
    <errorMessage>Please Enter Closure Code......</errorMessage>
</ValidationRule>