force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCRF_Description_Cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCRF_Description_Cannot_be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>((BMCServiceDesk__incidentDescription__c != null || BMCServiceDesk__incidentDescription__c !=&#39;&#39;)&amp;&amp;(ISCHANGED( BMCServiceDesk__incidentDescription__c )) &amp;&amp; ISNEW() = False &amp;&amp;  $User.Alias  &lt;&gt; &#39;lgial&#39; &amp;&amp; $User.Alias  &lt;&gt; &#39;ppasc&#39; &amp;&amp; $User.Alias  &lt;&gt; &#39;aadam&#39; &amp;&amp; $User.Alias  &lt;&gt; &#39;rtrew&#39; &amp;&amp; $User.Alias  &lt;&gt; &#39;ajaim&#39; &amp;&amp; $User.Alias  &lt;&gt; &#39;jgoll&#39;)</errorConditionFormula>
    <errorMessage>You cannot change Incident Description</errorMessage>
</ValidationRule>