force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCRF_Resolution_Is_Mandate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCRF_Resolution_Is_Mandate</fullName>
    <active>true</active>
    <description>BMCRF_Resolution_Is_Mandate</description>
    <errorConditionFormula>ISBLANK(BMCServiceDesk__incidentResolution__c) &amp;&amp;  (BMCServiceDesk__Status_ID__c = &#39;Resolved&#39; ||
BMCServiceDesk__Status_ID__c = &#39;Completed&#39; || BMCServiceDesk__Status_ID__c = &#39;Closed&#39; )</errorConditionFormula>
    <errorMessage>Please Enter Resolution......</errorMessage>
</ValidationRule>