force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCRF_Status_Completed_available_for_SR.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCRF_Status_Completed_available_for_SR</fullName>
    <active>true</active>
    <errorConditionFormula>BMCServiceDesk__Status_ID__c == &#39;Completed&#39; &amp;&amp; BMCServiceDesk__Type__c == &#39;Incident&#39;</errorConditionFormula>
    <errorMessage>Completed status only applies for  Service Request, Please select Resolved for Incident.</errorMessage>
</ValidationRule>