force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/BMCRF_Status_Resolved_available_for_Inc.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCRF_Status_Resolved_available_for_Inc</fullName>
    <active>true</active>
    <errorConditionFormula>BMCServiceDesk__Status_ID__c == &#39;Resolved&#39; &amp;&amp; BMCServiceDesk__Type__c == &#39;Service Request&#39;</errorConditionFormula>
    <errorMessage>Resolved status only applies for  Incident, Please select Completed for Service Request.</errorMessage>
</ValidationRule>