force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Do_you_require_something.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_you_require_something</fullName>
    <active>true</active>
    <description>If type of Ticket= Do you require something then requirement Type needs to be selected</description>
    <errorConditionFormula>AND( ISPICKVAL(  Type_of_ticket__c , &quot;Do you Require something (Access, new hardware, new starter, departures)&quot;) , ISBLANK( TEXT(  Requirement_Type__c  ) ) )</errorConditionFormula>
    <errorDisplayField>Requirement_Type__c</errorDisplayField>
    <errorMessage>Please select a Requirement Type</errorMessage>
</ValidationRule>