force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/EA_Number_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>EA_Number_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>(CONTAINS(  BMCServiceDesk__FKCategory__r.BMCServiceDesk__parentTree__c , &#39;MyPortal&#39;)) &amp;&amp; (ISBLANK( BMCRF_EA_Member_Number__c ) )</errorConditionFormula>
    <errorMessage>Please Enter Correct EA Member Function...</errorMessage>
</ValidationRule>