force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/myPortal.validationRule-meta.xml
<ValidationRule>
    <fullName>myPortal</fullName>
    <active>true</active>
    <description>if type of fault = myPortal then Type of MyPortal Issue needs to be selected</description>
    <errorConditionFormula>AND( ISPICKVAL( Type_of_Fault__c, &quot;MyPortal&quot;) , ISBLANK(   TEXT( Subcategory__c )  ) )</errorConditionFormula>
    <errorDisplayField>Subcategory__c</errorDisplayField>
    <errorMessage>Please select a MyPortal Issue</errorMessage>
</ValidationRule>