force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Name_of_other_application.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_of_other_application</fullName>
    <active>true</active>
    <description>If Application Type=Other then Name of Other Application should be entered</description>
    <errorConditionFormula>AND(ISPICKVAL( Application_Type__c , &quot;Other&quot;), ISBLANK(  Name_of_Other_Application__c  ) )</errorConditionFormula>
    <errorDisplayField>Name_of_Other_Application__c</errorDisplayField>
    <errorMessage>Please enter the name of the other application</errorMessage>
</ValidationRule>