force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Other_Application_name_rqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Application_name_rqd</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Application_Type__c , &#39;Other&#39;),(ISBLANK(Name_of_Other_Application__c) ))</errorConditionFormula>
    <errorDisplayField>Name_of_Other_Application__c</errorDisplayField>
    <errorMessage>Please enter Name of Other Application</errorMessage>
</ValidationRule>