force-app/main/default/objects/BMCServiceDesk__Incident__c/validationRules/Select_Impact.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Impact</fullName>
    <active>true</active>
    <description>If &quot;Is something broken&quot; is selected, then an impact needs to be given</description>
    <errorConditionFormula>AND(ISPICKVAL(Type_of_ticket__c, &quot;Is something broken (used to work but no longer does)&quot;), ISBLANK(   BMCServiceDesk__FKImpact__c ) )</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__FKImpact__c</errorDisplayField>
    <errorMessage>Please select an impact</errorMessage>
</ValidationRule>